更改组件标注开始结束

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,14 +30,15 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        
-        <!-- widget start:返回顶部 -->
+
+        <!-- ws:返回顶部 -->
         <div class="backtop">
             <div class="backtop-icon">
                 <i class="icon uf uf-triangle-up"></i>
             </div>
         </div>
-        <!-- widget end:返回顶部 -->
+        <!-- we返回顶部 -->
+
 
 
         <!-- js -->
