add: morderizr & grid

--- a/src/html/test/test.html
+++ b/src/html/test/test.html
@@ -16,9 +16,11 @@
         <script src="//cdn.bootcss.com/html5shiv/r29/html5.js"></script>
         <![endif]-->
 
+        <script src="../../../vendor/modernizr/modernizr.min.js"></script>
+
         <!-- style -->
-        <link rel="stylesheet" href="../../vendor/animate/animate.min.css">
-        <link rel="stylesheet" href="../../css/index.css">
+        <link rel="stylesheet" href="../../../vendor/animate/animate.min.css">
+        <link rel="stylesheet" href="../../css/iconfont.css">
 
     </head>
     <body>
@@ -29,7 +31,7 @@
 
 
         <!-- js -->
-        <script src="../../vendor/jquery/jquery.min.js"></script>
-        <script src='../../vendor/velocity/velocity.min.js'></script>
+        <script src="../../../vendor/jquery/jquery.min.js"></script>
+        <script src='../../../vendor/velocity/velocity.min.js'></script>
     </body>
 </html>
