--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,10 +16,14 @@
         <script src="//cdn.bootcss.com/html5shiv/r29/html5.js"></script>
         <![endif]-->
 
+        <script src="../../vendor/modernizr/modernizr.min.js"></script>
+
         <!-- style -->
+
+        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="../../vendor/purecss/grids.min.css">
         <link rel="stylesheet" href="../../vendor/animate/animate.min.css">
         <link rel="stylesheet" href="../css/iconfont.css">
-        <link rel="stylesheet" href="../css/index.css">
 
     </head>
     <body>
@@ -27,6 +31,16 @@
 
         <!-- content -->
         <h1>Cloud首页</h1>
+
+
+        <!-- grid测试 -->
+        <!-- <div class="pure-g">
+            <div class="pure-u-1-3"><p>Thirds</p></div>
+            <div class="pure-u-1-3"><p>Thirds</p></div>
+            <div class="pure-u-1-3"><p>Thirds</p></div>
+        </div> -->
+
+
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
